wellesleynet/roles/k8s/files/authelia.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authelia
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  serviceName: "authelia"
  template:
    metadata:
      labels:
        app: authelia
    spec:
      containers:
      - image: authelia/authelia:4.4.0
        imagePullPolicy: Always
        name: authelia
        ports:
        - containerPort: 80
        volumeMounts:
        - name: authelia-config
          mountPath: /etc/authelia
        - name: authelia-data
          mountPath: /data
      volumes:
      - name: authelia-config
        configMap:
          name: authelia
      - name: authelia-data
        persistentVolumeClaim:
          claimName: authelia
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: authelia
spec:
  selector:
    app: authelia
  ports:
  - name: authelia
    port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: authelia
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
  - host: authelia.kiski.co
    http:
      paths:
      - backend:
          serviceName: authelia
          servicePort: 80
  tls:
  - hosts:
    - authelia.kiski.co
    secretName: kiskico-wildcard
